syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "v1/annotation.proto";

option go_package = "generated-go/v1";

service RevisionService {
  rpc ListRevisions(ListRevisionsRequest) returns (ListRevisionsResponse) {
    option (google.api.http) = {get: "/v1/{parent=instances/*/databases/*}/revisions"};
    option (google.api.method_signature) = "parent";
    option (bytebase.v1.permission) = "bb.revisions.list";
    option (bytebase.v1.auth_method) = IAM;
  }
  rpc GetRevision(GetRevisionRequest) returns (Revision) {
    option (google.api.http) = {get: "/v1/{name=instances/*/databases/*/revisions/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.revisions.get";
    option (bytebase.v1.auth_method) = IAM;
  }
  rpc CreateRevision(CreateRevisionRequest) returns (Revision) {
    option (google.api.http) = {
      post: "/v1/{parent=instances/*/databases/*}/revisions"
      body: "revision"
    };
    option (bytebase.v1.permission) = "bb.revisions.create";
    option (bytebase.v1.auth_method) = IAM;
  }
  rpc BatchCreateRevisions(BatchCreateRevisionsRequest) returns (BatchCreateRevisionsResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=instances/*/databases/*}/revisions:batchCreate"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.revisions.create";
    option (bytebase.v1.auth_method) = IAM;
  }
  rpc DeleteRevision(DeleteRevisionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=instances/*/databases/*/revisions/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.revisions.delete";
    option (bytebase.v1.auth_method) = IAM;
  }
}

message ListRevisionsRequest {
  // The parent of the revisions.
  // Format: instances/{instance}/databases/{database}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Database"}
  ];

  // The maximum number of revisions to return. The service may return fewer
  // than this value. If unspecified, at most 10 revisions will be returned. The
  // maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A page token, received from a previous `ListRevisions` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `ListRevisions` must
  // match the call that provided the page token.
  string page_token = 3;

  bool show_deleted = 4;
}

message ListRevisionsResponse {
  repeated Revision revisions = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message CreateRevisionRequest {
  // Format: instances/{instance}/databases/{database}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Database"}
  ];

  // The revision to create.
  Revision revision = 2 [(google.api.field_behavior) = REQUIRED];
}

message BatchCreateRevisionsRequest {
  // The parent resource shared by all revisions being created.
  // Format: instances/{instance}/databases/{database}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Database"}
  ];

  // The request message specifying the revisions to create.
  // A maximum of 100 revisions can be created in a batch.
  repeated CreateRevisionRequest requests = 2 [(google.api.field_behavior) = REQUIRED];
}

message BatchCreateRevisionsResponse {
  // The created revisions.
  repeated Revision revisions = 1;
}

message GetRevisionRequest {
  // The name of the revision.
  // Format: instances/{instance}/databases/{database}/revisions/{revision}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Revision"}
  ];
}

message DeleteRevisionRequest {
  // The name of the revision to delete.
  // Format: instances/{instance}/databases/{database}/revisions/{revision}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Revision"}
  ];
}

message Revision {
  option (google.api.resource) = {
    type: "bytebase.com/Revision"
    pattern: "instances/{instance}/databases/{database}/revisions/{revision}"
  };

  // Format: instances/{instance}/databases/{database}/revisions/{revision}
  string name = 1;

  // Format: projects/{project}/releases/{release}
  // Can be empty.
  string release = 2 [(google.api.resource_reference) = {type: "bytebase.com/Release"}];

  google.protobuf.Timestamp create_time = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Format: users/hello@world.com
  // Can be empty.
  string deleter = 5;

  // Can be empty.
  google.protobuf.Timestamp delete_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Format: projects/{project}/releases/{release}/files/{id}
  // Can be empty.
  string file = 7;

  string version = 8;

  // The sheet that holds the content.
  // Format: projects/{project}/sheets/{sheet}
  string sheet = 9 [(google.api.resource_reference) = {type: "bytebase.com/Sheet"}];
  // The SHA256 hash value of the sheet.
  string sheet_sha256 = 10 [(google.api.field_behavior) = OUTPUT_ONLY];
  // The statement is used for preview purpose.
  string statement = 11 [(google.api.field_behavior) = OUTPUT_ONLY];
  int64 statement_size = 12 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The issue associated with the revision.
  // Can be empty.
  // Format: projects/{project}/issues/{issue}
  string issue = 13 [(google.api.resource_reference) = {type: "bytebase.com/Issue"}];

  // The task run associated with the revision.
  // Can be empty.
  // Format:
  // projects/{project}/rollouts/{rollout}/stages/{stage}/tasks/{task}/taskRuns/{taskRun}
  string task_run = 14 [(google.api.resource_reference) = {type: "bytebase.com/TaskRun"}];
}
